<resources>
    <string name="app_name">Merchant Tablet</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_phone_number">Enter phone number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="channel_name_default">jayuNotifications</string>
    <string name="channel_description_default">defaultJayuNotifications</string>
    <string name="CHANNEL_DEFAULT">defaultNotificationChannel</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="add_photo">Add photo</string>
    <string name="required">required</string>
    <string name="email">Email</string>
    <string name="for_receiving_gift_cards">For receiving gift cards</string>
    <string name="select_birthday">Select birthday</string>
    <string name="for_birthday_specials">For birthday specials</string>
    <string name="birthdays_can_only_be_set_once">Birthdays can only be set once</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="register">Register</string>
    <string name="cancel">Cancel</string>
    <string name="username">Username</string>
    <string name="change_photo">Change photo</string>
    <string name="or">or</string>
    <string name="phone_input_hint">Enter your phone number to claim rewards.</string>
    <string name="login">Login</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="logo">logo</string>
    <string name="back">Back</string>
    <string name="no_active_subscription_exists_for_this_account">No active subscription exists for this account</string>
    <string name="sign_up_today">Sign up today</string>
    <string name="not_a_customer_create_an_account">Not a customer? Create an account.</string>
    <string name="portal_login">Portal login</string>
    <string name="log_into_your_web_portal_to_update_your_account">Log into your web portal to update your account.</string>
    <string name="inactive_screen_disclaimer">Your account subscription may have been canceled, or you may have not been registered as a customer. Please contact support if help is needed.</string>
    <string name="image_bkg">image_bkg</string>
    <string name="company">Company</string>
    <string name="lock_screen">Lock screen</string>
    <string name="update_points">Update points</string>
    <string name="team_member">Team member</string>
    <string name="log_out">Log out</string>
    <string name="header">Header</string>
    <string name="description">Description</string>
    <string name="placeholder">Placeholder</string>
    <string name="web_portal">Web portal</string>
    <string name="update">Update</string>
    <string name="update_points_pts_desc">Adjust points to give the next customer - points will reset afterwards.</string>
    <string name="number_of_points">Number of points</string>
    <string name="points_per_customer">## points per customer</string>
    <string name="update_points_timeout_desc">Turning off point timeout allows customers to get points back to back without waiting the default timeout period.</string>
    <string name="points_timeout">Points timeout</string>
    <string name="update_points_popup_disclaimer">Update default points and default point timeout periods in your web portal.</string>
    <string name="ok">OK</string>
    <string name="pin_number">Pin number</string>
    <string name="submit">Submit</string>
    <string name="lock_screen_popup_desc_lock">This will prevent others from making any changes on this device.\nEnter a 4 digit pin to unlock this device later.</string>
    <string name="lock_screen_popup_desc_unlock">Enter the 4 digit pin to unlock this device.</string>
    <string name="unlock_screen">Unlock Screen</string>
    <string name="pts">Pts</string>
    <string name="_99999_points">99999 points</string>
    <string name="name">Name</string>
    <string name="points_response_desc">From Go Get Yogurt and now have 45 points for rewards.</string>
    <string name="www_jayu_me">www.jayu.me</string>
    <string name="pts_response_more_info">Download Jayu to start getting free gift cards!</string>
    <string name="confetti">Confetti</string>
    <string name="pts_response_download_text">Download Jayu to start getting free gift cards!</string>
    <string name="profile_image">Profile Image</string>
    <string name="ribbon">Ribbon</string>
    <string name="too_soon">Too soon</string>
    <string name="signup_offer">Signup offer</string>
    <string name="happy_hours">Happy hours</string>
    <string name="tablet_header">Get sweet rewards and free gift cards.</string>
    <string name="icon">Icon</string>
    <string name="team_logout">Team logout</string>
    <string name="assign_tablet_to_cashier">Assign tablet to cashier</string>
    <string name="team_login_desc">This employee will get credit for new customers joining the loyalty program through this tablet.</string>
    <string name="send_code">Send code</string>
    <string name="enter_code_sent_to">Enter code sent to</string>
    <string name="verification_code">Verification code</string>
    <string name="verify">Verify</string>
    <string name="point_converter">Point converter</string>
    <string name="pts_convert_popup_desc">Calculate the amount of points to give each customer. \nWhen activated enter the amount before giving points.</string>
    <string name="base_amount">Base amount</string>
    <string name="activate_converter">Activate converter</string>
    <string name="pts_convert_popup_disclaimer">Customers get 0 points for every 0 dollars.</string>
    <string name="next">Next</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="enter_employee_pin">Enter Employee Pin</string>
    <string name="enter_pts_popup_desc">0 points to the customer</string>
    <string name="amount">Amount</string>
    <string name="pin">PIN</string>
    <string name="refresh">Refresh</string>
    <string name="promo_image">promo_image</string>
    <string name="team_registration_disclaimer">By signing up with Jayu you agree to our</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="you_have_earned">You have earned</string>
    <string name="_99999">99999</string>
    <string name="points">Points</string>
    <string name="point_icon">Point Icon</string>
    <string name="from_your_visit_to">from your visit to</string>
    <string name="you_have_99999_for_rewards">You have 99999 for rewards</string>
    <string name="check_us_out">Check us out!</string>
    <string name="qr_code">QR Code</string>
    <string name="more_info_rewards_program_url">For more information about rewards visit www.jayu.app.</string>
    <string name="point">point</string>
</resources>