<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp"
    app:cardPreventCornerOverlap="false"
    tools:context=".screens.popups.PointConvertPopup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textPtsConvertPopupHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/point_converter"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPtsConvertPopupDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:text="@string/pts_convert_popup_desc"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/textPtsConvertPopupHeader" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPtsConvertPopupPoints"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textPtsConvertPopupDesc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPtsConvertPoints"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_award"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/number_of_points"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="13"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPtsConvertAmount"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputPtsConvertPopupPoints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPtsConvertAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_dollar_sign"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/base_amount"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="13"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchPtsConvertActivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:text="@string/activate_converter"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputPtsConvertAmount"
            app:thumbTint="@color/switch_thumb_selector"
            app:trackTint="@color/switch_track_selector" />

        <TextView
            android:id="@+id/textPtsConvertPopupDisclaimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="100dp"
            android:textStyle="bold"
            android:text="@string/pts_convert_popup_disclaimer"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/switchPtsConvertActivate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPtsConvertPopupDisclaimer">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPtsConvertPopupCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:textStyle="bold"
                android:stateListAnimator="@null"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="15dp"
                android:layout_height="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPtsConvertPopupSubmit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:stateListAnimator="@null"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>