<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="10dp"
    tools:context=".screens.popups.LockScreenPopup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textPopupLockScreenHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/soleil_bold"
            android:gravity="center"
            android:text="@string/lock_screen"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textPopupLockScreenDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:text="@string/lock_screen_popup_desc_lock"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/textPopupLockScreenHeader" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPopupLockScreen"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textPopupLockScreenDesc">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextLockScreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_key"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPrimary"
                android:hint="@string/pin_number"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputPopupLockScreen">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPopupLockScreenCancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@android:color/darker_gray"
                android:fontFamily="@font/soleil_bold"
                android:stateListAnimator="@null"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

            <View
                android:layout_width="15dp"
                android:layout_height="0dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPopupLockScreenSubmit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/soleil_bold"
                android:stateListAnimator="@null"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>